--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,24 @@
-# Node modules
-node_modules/
-
-# Build output
-build/
-
-# Dependency directories
-.cache/
-.docusaurus/
-
-# Local environment files
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# Log files
+# Logs
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# IDE and OS-specific files
+node_modules
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
 .DS_Store
-.vscode/
-.idea/
-
-# Test coverage output
-coverage/
-
-# React specific cache and artifacts
-public/*.map
-
-# Optional eslint cache
-.eslintcache
-
-# Optional TypeScript cache
-*.tsbuildinfo
-
-# Dist folder (if using a custom build directory)
-dist/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
