--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.27.0",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.4",
