--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "cmdk": "^1.0.0",
     "lucide-react": "^0.453.0",
     "next-themes": "^0.3.0",
+    "quill": "^2.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-loader-spinner": "^6.1.6",
+    "react-quilljs": "^2.0.4",
     "react-router-dom": "^6.27.0",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.4",
