--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
+    "start": "serve -s dist",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -47,6 +48,7 @@
     "eslint-plugin-react-refresh": "^0.4.13",
     "globals": "^15.11.0",
     "postcss": "^8.4.47",
+    "serve": "^14.2.4",
     "tailwindcss": "^3.4.14",
     "vite": "^5.4.10"
   }
